--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A simple static blog cms",
   "author": "Gio d'Amelio",
   "license": "MIT",
-  "main": "index.js",
+  "bin": {
+    "boggart": "./lib/main.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/giodamelio/boggart.git"
@@ -16,5 +18,15 @@
   "bugs": {
     "url": "https://github.com/giodamelio/boggart/issues"
   },
-  "homepage": "https://github.com/giodamelio/boggart"
+  "homepage": "https://github.com/giodamelio/boggart",
+  "devDependencies": {
+    "gulp": "^3.8.11",
+    "gulp-babel": "^4.0.0",
+    "gulp-insert": "^0.4.0",
+    "gulp-nodemon": "^1.0.5",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-util": "^3.0.4",
+    "pretty-error": "^1.1.1",
+    "source-map-support": "^0.2.10"
+  }
 }
