--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-shell": "^0.4.0",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-util": "^3.0.4",
+    "gulp-webpack": "^1.3.0",
     "node-inspector": "^0.9.2",
     "pretty-error": "^1.1.1",
     "source-map-support": "^0.2.10"
