--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/giodamelio/boggart",
   "devDependencies": {
+    "babel-core": "^4.7.16",
+    "babel-loader": "^4.2.0",
     "gulp": "^3.8.11",
     "gulp-babel": "^4.0.0",
     "gulp-insert": "^0.4.0",
@@ -28,11 +30,14 @@
     "gulp-sourcemaps": "^1.5.1",
     "gulp-util": "^3.0.4",
     "gulp-webpack": "^1.3.0",
+    "jsx-loader": "^0.12.2",
     "node-inspector": "^0.9.2",
     "pretty-error": "^1.1.1",
-    "source-map-support": "^0.2.10"
+    "source-map-support": "^0.2.10",
+    "webpack": "^1.7.3"
   },
   "dependencies": {
-    "express": "^4.12.3"
+    "express": "^4.12.3",
+    "react": "^0.13.1"
   }
 }
